# ytcon

./: .gitignore  README.md  pyproject.toml  requirements.txt  tags_marker.py  test.py  yt.py  ytcon.spec
.github/workflows/: python-publish.yml
.obs/: _service  workflows.yml
src/ytcon/: __init__.py  __version__.py  app_update.py  cli_to_api.py  log.py  yt.py
src/ytcon/app_update/: bottom_widget_updater.py  settings_section.py  updater.py  variables.py
src/ytcon/control/: control.py  exit.py  variables.py
src/ytcon/downloader/: hook.py  main.py  map_variables.py
src/ytcon/loops/: error_printer.py  log_printer.py  render_tasks.py  tick_handlers.py
src/ytcon/misc/: clipboard.py  ffmpeg.py
src/ytcon/render/: colors.py  loop.py  progressbar_defs.py  render.py  static_methods.py
src/ytcon/settings/: settings_processor.py  ytdl_opts.py
src/ytcon/settings_menu/: render.py  sections.py  variables.py
src/ytcon/settings_plugins/: __init__.py
src/ytcon/settings_plugins/plugins/: .template  cookiesfrombrowser.py  cookiesfrombrowser_chromium.py  ignoreerors.py  loresipisum.py  no_check_certificate.py  yt-dlp.user_agent.py
src/ytcon/widgets/: input_handler.py  main_widgets.py  top_pile.py
