[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytcon"
version = "0.0.10"
authors = [
  {name="NikitaBeloglazov", email="nnikita.beloglazov@gmail.com"},
]
description = "yt-dlp pseudo-graphical console interface (TUI) ✨"
readme = "README.md"
license = {text = "MPL 2.0 License"}

requires-python = ">=3.9"
dependencies = ["urwid>=2.1.2", "pyperclip", "ffmpeg-python>=0.2.0", "yt_dlp"]

keywords = ["ytcon", "yt-dlp", "yt_dlp", "ytdlp", "tui"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Topic :: Multimedia :: Video"
]

[project.scripts]
ytcon = "ytcon:yt"

[project.urls]
"Homepage" = "https://github.com/NikitaBeloglazov/ytcon"
"Bug Tracker" = "https://github.com/NikitaBeloglazov/ytcon/issues"