[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ytcon"
dynamic = ["version"] # setuptools_scm

authors = [
  {name="NikitaBeloglazov", email="nnikita.beloglazov@gmail.com"},
]

description = "yt-dlp pseudo-graphical console interface (TUI) ✨"
readme = "README.md"
license = {text = "MPL 2.0 License"}

requires-python = ">=3.9"
dependencies = ["requests", "urwid>=2.1.2", "tqdm", "clipman", "ffmpeg-python>=0.2.0", "yt_dlp"]

keywords = ["ytcon", "yt-dlp", "yt_dlp", "ytdlp", "tui"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Topic :: Multimedia :: Video"
]

[project.scripts]
ytcon = "ytcon:yt"

[project.urls]
"Homepage" = "https://github.com/NikitaBeloglazov/ytcon"
"Bug Tracker" = "https://github.com/NikitaBeloglazov/ytcon/issues"

[tool.setuptools_scm]
# DO NOT add numbers to version. I decide which version I need to post
version_scheme = "release-branch-semver"

# get only tag, 3.2.0, not an 3.2.0.dev17+g2868326.d20240223abcdefghijklmnopqrstuvwxyz
git_describe_command = "git describe --tags"

# overwrites an fallback template
version_file = "src/ytcon/__version__.py"
